[tool.poetry]
name = "gen_ai_exploration_hub"
version = "0.1.0"
description = "Repository for exploring the generation of AI models and their deployment"
authors = ["juan calvo <juancalvoferrandiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1"
langchain-cli = { extras = ["serve"], version = "^0.0" }
langchain-experimental = "^0.0"
langsmith = "^0.1"
langserve = { extras = ["server"], version = "^0.0.39" }
langchain-google-vertexai = "^0.1.0"
google-cloud-aiplatform = "^1.39.0"
tabulate = "^0.9.0"
grpcio = "^1.54.2"
grpcio-status = "^1.54.2"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
pydantic = "^1.10.10"
sqlalchemy-bigquery = "^1.9.0"
google-cloud-bigquery-storage = "^2.24.0"
jupyter = "^1.0.0"
langchain-google-genai = "^0.0.8"
numexpr = "^2.9.0"
google-api-python-client = "^2.118.0"
gql = "^3.5.0"
requests-toolbelt = "^1.0.0"
langgraph = "^0.0.24"
langchain-openai = "^0.0.6"
langchainhub = "^0.1.14"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]